--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="header">
             <h1 id="name">Judge0 IDE</h1>
             <h2 id="version"></h2>
-            <button id="button">Run(F9)</button>
+            <input type="button" value="RUN(F9)" id="button">
             <select id="list"></select>
         </div>
             <input id="box" type="text">
