--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             }
             #button {
                 margin-left: 2%;
-                width: 10%;
+                width: 100px;
+                height: 100px;
                 margin-top: 2%;
                 
             }
@@ -92,7 +93,8 @@
                 color: white;
             }
             #list {
-                width: 30%;
+                width: 300px;
+                height: 100px;
                 margin-top: 2%;
             }
             #list:hover{
