--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
             <script>
                 $(document).ready(function(){
-                    var default_URL = "http://34.64.99.230/"; //gcp 서버 닫았다가 열면 재설정해주기
+                    var default_URL = "http://34.64.195.231/"; //gcp 서버 닫았다가 열면 재설정해주기
                     var languages;
                     var lan_num;
 
@@ -48,14 +48,16 @@
                             url: default_URL + "submissions/?wait=true",
                             data: sendData,
                             success: function (result) {
-                                //alert(JSON.stringify(result));
                                 if (result.hasOwnProperty("stdout") && result.stdout != null) {
-                                    $("#success").text("Success!");
-                                    $("#output").append(result.stdout);
+                                    //$("#success").text("Success!"); //성공시 성공이라고 출력
+                                    $("#output").text(result.stdout);
+                                }
+                                else if (result.hasOwnProperty("stderr") && result.stderr != null) {
+                                    $("#output").text("Error!\n" + result.stderr);
                                 }
                                 else if (result.error != null) {
-                                    $("#success").append("Error");
-                                    $("#output").append(result.error);
+                                    //$("#success").text("Error");
+                                    $("#output").text("Error!\n" + result.error);
                                 }
                             },
                             error:function(request,status,error){
@@ -108,6 +110,7 @@
                 background-color: rgb(38, 38, 38);
                 color: lightgrey;
                 font-size: 20px;
+                resize: none;
             }
             #box:hover{
                 color: lightgray;
@@ -120,6 +123,15 @@
                 background-color : black;
                 color : white;
             }
+            #output {
+                width: 100%;
+                height: 50vh;
+                margin-top: 10px;
+                background-color: rgb(38, 38, 38);
+                color: lightgrey;
+                font-size: 20px;
+                resize: none;
+            }
         </style>
     <body>
         
@@ -131,7 +143,6 @@
         </div>
         <hr>
         <textarea id="box"></textarea>
-        <h3 id="success"></h3>
-        <h4 id="output"></h4>
+        <textarea id="output" disabled></textarea>
     </body>
 </html>
